<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dictionary</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="hintWord">Please input a new word here</string>
    <string name="hintDetail">Please input the detail here</string>
    <string name="textInsert">Add a new word</string>
    <string name="textSearch">Search</string>
    <string name="hintKey">Please input key words here.</string>
    <string name="textResult">Result</string>
    <string name="textTranslation">Translation:</string>

</resources>
