<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:hint="@string/hintWord" />
    
	<EditText 
	    android:id="@+id/detail"
	    android:layout_width="match_parent"
	    android:layout_height="150dp"
        android:layout_marginTop="20dp"
	    android:hint="@string/hintDetail"/>    
    
	<Button 
	    android:id="@+id/insert"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
	    android:text="@string/textInsert" />
	
	<EditText 
	    android:id="@+id/key"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:hint="@string/hintKey" />
	
	<Button
	    android:id="@+id/search"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:text="@string/textSearch" />

</LinearLayout>
